finished experience section, with adding and removing funcitonality. fixed root overflow-y so root now fills entire height of window

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
 
 html, body {
   height: 100%;
+  overflow-y: auto;
   margin: 0;
 }
 
 #root {
   background-color: rgb(245, 245, 245);
+  overflow-y: auto;
   height: 90%;
   margin: 0 auto;
   padding: 30px 0px 30px 0px;
@@ -18,7 +20,7 @@ html, body {
   background-color: rgb(255, 255, 255);
   width: clamp(300px, 50%, 500px);
   border-radius: 10px;
-  box-shadow: -8px 8px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: -8px 8px 20px rgba(157, 157, 157, 0.5);
   padding: 30px;
   margin: 15px auto;
   display: flex;
@@ -41,6 +43,7 @@ button {
   color: white;
   align-self: center;
   width: 70px;
+  margin-top: 20px;
   padding: 5px;
   border: 0px;
   border-radius: 8px;
@@ -55,6 +58,7 @@ button:hover {
 .delete-button {
   background-color: rgb(243, 132, 132);
   margin-left: 30px;
+  margin-top: 0px;
 }
 
 h2, h3 {
@@ -67,8 +71,20 @@ label {
 }
 
 input {
+  background-color: rgb(235, 235, 235);
   padding: 8px;
   margin: 5px 0px 5px 0px;
-  border: 1px solid rgb(109, 109, 109);
+  border: 0;
   border-radius: 8px;
+}
+
+textarea {
+  box-sizing: border-box;
+  background-color: rgb(235, 235, 235);
+  width: 100%;
+  padding: 8px;
+  margin: 5px 0px 5px 0px;
+  border: 0;
+  border-radius: 8px;
+  resize: none;
 }
